Fix two regressions related to sizing of canvas frames.  b=331458  r+sr=roc