layout/generic/nsGfxScrollFrame.cpp
@@ -690,9 +690,12 @@ nsHTMLScrollFrame::PlaceScrollArea(const ScrollReflowState& aState)
   // Store the new overflow area. Note that this changes where an outline
   // of the scrolled frame would be painted, but scrolled frames can't have
   // outlines (the outline would go on this scrollframe instead).
-  nsRect* overflowArea = scrolledFrame->GetOverflowAreaProperty(PR_TRUE); 
-  NS_ASSERTION(overflowArea, "should have created rect");
-  *overflowArea = scrolledArea;
+  // Using FinishAndStoreOverflow is needed so NS_FRAME_OUTSIDE_CHILDREN
+  // gets set correctly.  It also messes with the overflow rect in the
+  // -moz-hidden-unscrollable case, but scrolled frames can't have
+  // 'overflow' either.
+  scrolledFrame->FinishAndStoreOverflow(&scrolledArea,
+                                        scrolledFrame->GetSize());
 
   mInner.PostOverflowEvents();
 }
